# CppDemo

./: README.md
Coroutine/: CMakeLists.txt  MyCoroGenerator.cpp  MyCoroGenerator.md
DesignPattern/: CMakeLists.txt
DesignPattern/02.工厂方法模式/: CMakeLists.txt  main.cpp
DesignPattern/06.适配器模式/: CMakeLists.txt  README.md
DesignPattern/08.装饰模式/: README.md
DesignPattern/09.外观模式/: README.md
DesignPattern/10.桥接模式/: CMakeLists.txt  README.md  main.cpp
DesignPattern/11.组合模式/: README.md
DesignPattern/12.享元模式/: README.md
DesignPattern/13.观察者模式/: CMakeLists.txt  README.md  main.cpp
DesignPattern/14.策略模式/: README.md
DesignPattern/15.命令模式/: CMakeLists.txt  README.md  main.cpp
DesignPattern/16.中介者模式/: README.md
DesignPattern/17.备忘录模式/: README.md  main.cpp
DesignPattern/18.模板方法模式/: README.md
DesignPattern/19.迭代器模式/: README.md
DesignPattern/20.状态模式/: README.md
DesignPattern/21.责任链模式/: README.md  main.cpp
DesignPattern/22.解释器模式/: README.md
DesignPattern/23.访问者模式/: README.md
FmtInner/: CMakeLists.txt  main.cpp
ModernCpp/: simpread-C++ 模板进阶指南：SFINAE.md
ModernCpp/C++11/: C++11.md
ModernCpp/C++14/: C++14.md
ModernCpp/C++17/: C++17.md
MyJson/: CMakeLists.txt  MyJson.cpp  MyJson.h  README.md  main.cpp
MyUtils/: CMakeLists.txt  MyUtils.hpp  main.cpp
OJ/: README.md
OJ/LeetCode/: README.md
OJ/LeetCode/0000.Utils/: Utils.hpp
OJ/LeetCode/0383.赎金信/: CMakeLists.txt  README.md  main.cpp  main.h
OJ/LeetCode/0412.FizzBuzz/: CMakeLists.txt  README.md  main.cpp  main.h
OJ/LeetCode/0876.链表的中间节点/: CMakeLists.txt  README.md  input.txt  main.cpp  main.h
OJ/LeetCode/1342.将数字变成0的操作次数/: README.md  input.txt  main.cpp  main.h
OJ/LeetCode/1480.一维数组的动态和/: CMakeLists.txt  README.md  main.cpp  main.h
OJ/LeetCode/1672.最富有客户的资产总量/: CMakeLists.txt  README.md  input.txt  main.cpp  main.h
OJ/NowCoder/: README.md
OpenGL/: CMakeLists.txt
OpenGL/1.6.纹理/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
OpenGL/1.7.变换/: CMakeLists.txt  frg.glsl  main.cpp  ver.glsl
OpenGL/1.9.摄像机/: CMakeLists.txt
OpenGL/2.4.光照贴图/: frg.glsl  main.cpp
OpenGL/2.5.3.投光物-聚光/: CMakeLists.txt  main.cpp
OpenGL/3.2.网格/: mesh.hpp
SocketStudy/: README.md
SocketStudy/01.SocketBase/: README.md
SocketStudy/01.SocketBase/client/: CMakeLists.txt  main.cpp
SocketStudy/01.SocketBase/server/: CMakeLists.txt  main.cpp
SocketStudy/01.理解网络编程和套接字/: CMakeLists.txt  README.md  win_clnt_hello.cpp  win_serv_hello.cpp
SocketStudy/02.套接字类型与协议设置/: CMakeLists.txt  README.md  tcp_client.cpp  tcp_server.cpp  win_clnt_tcp.cpp
SocketStudy/03.地址族与数据序列/: README.md  endian_conv.cpp  inet_addr.cpp  inet_aton.cpp  inet_ntoa.cpp
SocketStudy/04.基于TCP的服务端与客户端1/: README.md  echo_client.cpp  echo_server.cpp
SocketStudy/05.基于TCP的服务端与客户端2/: README.md
SocketStudy/06.基于UDP的服务端与客户端/: README.md  uecho_client.cpp  uecho_server.cpp
SocketStudy/07.优雅地断开套接字连接/: README.md
SocketStudy/08.域名及网络地址/: README.md  gethostbyaddr.cpp  gethostbyname.cpp
SocketStudy/09.套接字的多种可选项/: README.md
SocketStudy/12.IO复用/: README.md  select.cpp  server_select_echo.cpp
SocketStudy/13.多种IO函数/: CMakeLists.txt  README.md  oob_recv.c  oob_send.c  peek_recv.cpp  peek_send.cpp  writev.cpp
SocketStudy/14.多播与广播/: CMakeLists.txt  README.md  new_recv_brd_win.cpp  news.txt  news_receiver.cpp  news_receiver_brd.cpp  news_send_brd.cpp  news_sender.cpp
SocketStudy/15.套接字和标准IO/: README.md
SocketStudy/16.关于IO流分离的其它内容/: README.md
SocketStudy/17.优于select的epoll/: README.md  et_epoll_server.cpp  final_server_epoll.cpp  lt_epoll_server.cpp  server_echo_epoll.cpp
SocketStudy/18.多线程服务端的实现/: CMakeLists.txt  README.md  client.cpp  server.cpp
SocketStudy/HttpTxt/: .vimspector.json  CMakeLists.txt  main.cpp  require.txt
SocketStudy/SocketBase/: CMakeLists.txt
SocketStudy/SocketBase/client/: main.cpp
ThreadPool/: CMakeLists.txt  README.md  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp  main.cpp
ThreadStudy/: README.md
ThreadStudy/1.1.CreateThread/: 1.1.创建线程.md  CMakeLists.txt  main.cpp
ThreadStudy/1.2.MutexAtomic/: CMakeLists.txt  README.md  main.cpp
ThreadStudy/1.3.CondvarSema/: 1.3.条件变量和信号量.md  CMakeLists.txt  main.cpp
ThreadStudy/1.4.PromiseFuture/: 1.4.PromiseFuture.md  CMakeLists.txt  main.cpp
ThreadStudy/1.5.PackagetaskAsync/: 1.5.PackagetaskAsync.md  CMakeLists.txt  main.cpp
VimConfig/: Mi6Termux.vimrc  MiPadTermux.vimrc  README.md
WinTimer/: CMakeLists.txt  README.md  main.cpp
